--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "@testing-library/user-event": "^13.5.0",
     "babel-plugin-macros": "^3.1.0",
     "fa-icons": "^0.2.0",
+    "firebase-admin": "^11.5.0",
     "latest-version": "^7.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
+    "react-loading-skeleton": "^3.1.0",
+    "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
