--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@testing-library/user-event": "^13.5.0",
     "babel-plugin-macros": "^3.1.0",
     "fa-icons": "^0.2.0",
-    "firebase-admin": "^11.5.0",
+    "firebase": "^9.17.1",
     "latest-version": "^7.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
