--- a/package.json
+++ b/package.json
@@ -14,8 +14,6 @@
     "fa-icons": "^0.2.0",
     "firebase": "^9.17.1",
     "latest-version": "^7.0.0",
-    "lord-icon-element": "^4.0.3",
-    "lottie-web": "^5.10.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
@@ -25,7 +23,7 @@
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.2",
-    "vercel": "^28.16.15",
+    "react-web-share": "^2.0.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
