--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "babel-plugin-macros": "^3.1.0",
+    "debug": "^4.3.4",
     "fa-icons": "^0.2.0",
     "firebase": "^9.17.1",
     "latest-version": "^7.0.0",
