--- a/package.json
+++ b/package.json
@@ -17,12 +17,12 @@
     "latest-version": "^7.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-draggable": "^4.4.5",
     "react-icons": "^4.7.1",
     "react-loading-icons": "^1.1.0",
     "react-loading-skeleton": "^3.1.0",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
-    "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.2",
     "react-web-share": "^2.0.2",
     "web-vitals": "^2.1.4"
